working on code

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/yuriyhorbatenko/Burger/issues"
   },
-  "homepage": "https://github.com/yuriyhorbatenko/Burger#readme"
+  "homepage": "https://github.com/yuriyhorbatenko/Burger#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {}
 }
